--- a/PredictionAid_App/requirements.txt
+++ b/PredictionAid_App/requirements.txt
@@ -9,7 +9,7 @@ blinker==1.9.0
 boto3==1.38.34
 botocore==1.38.34
 Bottleneck==1.4.2
-Brotli==1.0.9
+brotli==1.1.0
 cachetools==5.5.2
 certifi==2025.4.26
 cffi==1.17.1
@@ -48,7 +48,6 @@ MarkupSafe==3.0.2
 matplotlib==3.10.3
 matplotlib-inline==0.1.7
 mistune==3.1.3
-mkl-service==2.4.0
 mkl_fft==1.3.11
 mkl_random==1.2.8
 narwhals==1.41.0
@@ -57,7 +56,6 @@ nbconvert==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
 numexpr==2.10.1
-numpy==2.2.6
 openpyxl==3.1.5
 packaging==24.2
 pandas==2.2.3
@@ -112,7 +110,6 @@ tomlkit==0.13.3
 tornado==6.5.1
 traitlets==5.14.3
 typing_extensions==4.13.2
-tzdata==2025b
 unicodedata2==15.1.0
 urllib3==2.4.0
 watchdog==6.0.0
